# flwr_leaf

./: .gitignore  .gitmodules  LICENSE  README.md  client.py  pyproject.toml  requirements.txt  run.sh  server.py
config/: synthetic_client.yaml
scripts/: run.sh  run_client.py  run_fedavg_server.py
scripts/config/: synthetic_client.yaml  synthetic_server.yaml
src/flwr_leaf/client/: client.py  net.py
src/flwr_leaf/data/: synthetic.py
src/flwr_leaf/server/: fedavg.py
